change the name, styles, and the add event

--- a/front-end/src/styles/Events.css
+++ b/front-end/src/styles/Events.css
@@ -4,12 +4,12 @@
 }
 
 .title {
-    @apply text-3xl font-bold px-4 py-2 bg-gray-200 border-b;
+    @apply text-2xl font-bold mb-5 p-2;
 }
 
 .add_events_button {
     @apply w-32 h-10 rounded-lg bg-cyan-100 hover:bg-orange-100 active:bg-orange-200;
-    @apply absolute top-5 right-32;
+    @apply absolute top-2.5 right-2.5 p-1 px-2.5 border-none rounded-sm cursor-pointer; 
 }
 
 .add-event-content {
@@ -33,16 +33,16 @@
     @apply flex space-x-4 items-center p-4 bg-cyan-100 rounded-lg;
 }
 
-.avatar {
+.Total_Balance_avatar {
     @apply w-20 h-20 rounded-full border-4 border-cyan-300;
 }
 
-.title {
-    @apply text-2xl font-medium;
+.Total_Balance_title {
+    @apply font-bold mb-2.5; 
 }
 
 .balance_details {
-    @apply text-lg;
+    @apply flex flex-col; 
 }
 
 .events_list {
