--- a/front-end/src/styles/Events.css
+++ b/front-end/src/styles/Events.css
@@ -18,7 +18,7 @@
 }
 
 .select-members-popup{
-    @apply w-32 h-10 rounded-lg bg-cyan-100 hover:bg-orange-100 active:bg-orange-200;
+    @apply flex flex-col space-y-4 p-6 bg-white rounded-lg shadow-lg;
 }
 
 .add-members-content{
