revert changes in Events.css

--- a/front-end/src/styles/Events.css
+++ b/front-end/src/styles/Events.css
@@ -1,4 +1,4 @@
-.Expense {
+.Event_main {
     @apply flex flex-col items-center space-y-5 p-4;
     @apply bg-cyan-50 min-h-screen p-6 font-mono;
 }
@@ -7,12 +7,12 @@
     @apply text-2xl font-bold mb-5 p-2;
 }
 
-.add_expense_button {
+.add_events_button {
     @apply w-32 h-10 rounded-lg bg-cyan-100 hover:bg-orange-100 active:bg-orange-200;
     @apply absolute top-2.5 right-2.5 p-1 px-2.5 border-none rounded-sm cursor-pointer; 
 }
 
-.add-expense-content {
+.add-event-content {
     @apply flex flex-col space-y-4 p-6 bg-white rounded-lg shadow-lg;
     @apply fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-cyan-100 rounded-2xl p-8;
 }
@@ -21,7 +21,7 @@
     @apply flex flex-col space-y-4 p-6 bg-white rounded-lg shadow-lg;
 }
 
-.add-contributors-content {
+.add-members-content{
     @apply flex flex-col space-y-4 p-6 bg-white rounded-lg shadow-lg;
 }
 
@@ -29,7 +29,7 @@
     @apply cursor-pointer;
 }
 
-.Total_Expense_Section {
+.Total_Balance_Section {
     @apply flex space-x-4 items-center p-4 bg-cyan-100 rounded-lg;
 }
 
@@ -37,25 +37,22 @@
     @apply w-20 h-20 rounded-full border-4 border-cyan-300;
 }
 
-<<<<<<< HEAD:front-end/src/styles/Event_main.css
-=======
 .Total_Balance_title {
     @apply font-bold mb-2.5; 
 }
 
->>>>>>> master:front-end/src/styles/Events.css
 .balance_details {
     @apply flex flex-col; 
 }
 
-.expenses_list {
+.events_list {
     @apply w-full flex flex-col space-y-4 mt-6;
 }
 
-.expense-list {
+.event-list {
     @apply flex justify-between items-center p-4 border-b border-gray-200;
 }
 
-.expense-list button {
+.event-list button {
     @apply w-28 h-8 rounded-lg bg-cyan-100 hover:bg-orange-100 active:bg-orange-200;
 }
