--- a/front-end/src/styles/Events.css
+++ b/front-end/src/styles/Events.css
@@ -1,58 +1,46 @@
-.Event_main {
+.expense-main {
     @apply flex flex-col items-center space-y-5 p-4;
     @apply bg-cyan-50 min-h-screen p-6 font-mono;
 }
 
-.title {
+.page-title {
     @apply text-2xl font-bold mb-5 p-2;
 }
 
-.add_events_button {
+.add-expenses-btn {
     @apply w-32 h-10 rounded-lg bg-cyan-100 hover:bg-orange-100 active:bg-orange-200;
-    @apply absolute top-2.5 right-2.5 p-1 px-2.5 border-none rounded-sm cursor-pointer; 
+    @apply absolute top-2.5 right-2.5 p-1 px-2.5 border-none rounded-sm cursor-pointer;
 }
 
-.add-event-content {
+.expense-content {
     @apply flex flex-col space-y-4 p-6 bg-white rounded-lg shadow-lg;
     @apply fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-cyan-100 rounded-2xl p-8;
 }
 
-.select-members-popup{
-    @apply flex flex-col space-y-4 p-6 bg-white rounded-lg shadow-lg;
-}
-
-.add-members-content{
-    @apply flex flex-col space-y-4 p-6 bg-white rounded-lg shadow-lg;
-}
-
-.close {
-    @apply cursor-pointer;
-}
-
-.Total_Balance_Section {
-    @apply flex space-x-4 items-center p-4 bg-cyan-100 rounded-lg;
-}
-
-.Total_Balance_avatar {
-    @apply w-20 h-20 rounded-full border-4 border-cyan-300;
-}
-
-.Total_Balance_title {
-    @apply font-bold mb-2.5; 
-}
-
-.balance_details {
-    @apply flex flex-col; 
-}
-
-.events_list {
+.expense-list-section {
     @apply w-full flex flex-col space-y-4 mt-6;
 }
 
-.event-list {
+.expense-item {
     @apply flex justify-between items-center p-4 border-b border-gray-200;
 }
 
-.event-list button {
+.expense-item button {
     @apply w-28 h-8 rounded-lg bg-cyan-100 hover:bg-orange-100 active:bg-orange-200;
+}
+
+.balance-section {
+    @apply flex space-x-4 items-center p-4 bg-cyan-100 rounded-lg;
+}
+
+.balance-avatar {
+    @apply w-20 h-20 rounded-full border-4 border-cyan-300;
+}
+
+.balance-title {
+    @apply font-bold mb-2.5;
+}
+
+.balance-details {
+    @apply flex flex-col;
 }
