--- a/front-end/src/styles/Navbar.css
+++ b/front-end/src/styles/Navbar.css
@@ -18,7 +18,7 @@
   flex-direction: column;
 }
 .active {
-  @apply text-blue-500 font-extrabold;
+  @apply text-blue-500 px-4 py-2 font-extrabold;
 }
 .normal {
   @apply text-black no-underline px-4 py-2 font-extrabold;
