--- a/front-end/src/styles/Expense.css
+++ b/front-end/src/styles/Expense.css
@@ -1,4 +1,5 @@
-/* Expense.css */
+/* Expense.css - styling of Expense Page */
+
 .expense-page {
     @apply bg-white min-h-screen p-6 font-mono; 
 }
@@ -12,9 +13,10 @@
 }
 
 .buttons > button {
-    @apply py-2 px-4 rounded-full font-bold mr-2; 
-    transition: background-color 0.2s;
+    @apply py-2 px-4 rounded-full font-bold mr-2;
     @apply w-32 h-10 rounded-lg bg-cyan-100 hover:bg-orange-100 active:bg-orange-200;
+    display: inline-block;  
+    transition: background-color 0.2s;
 }
 
 .expense-container {
