--- a/front-end/src/styles/AddExpense.css
+++ b/front-end/src/styles/AddExpense.css
@@ -1,12 +1,12 @@
-form {
+#addExpense form {
     @apply flex flex-col space-y-3 mt-10 bg-cyan-50 rounded-2xl p-8;
 }
 
-form div {
+#addExpense form div {
     @apply ml-6;
 }
 
-.formBtn {
+#addExpense form .formBtn {
     @apply m-auto;
 }
 
