--- a/front-end/src/styles/FriendsPage.css
+++ b/front-end/src/styles/FriendsPage.css
@@ -7,7 +7,7 @@
 }
 
 .balance-section {
-    @apply flex space-x-4 items-center p-4 bg-cyan-100 rounded-lg rounded-md mb-5; 
+    @apply flex space-x-4 items-center p-4 bg-cyan-100 rounded-lg;
 }
 
 .user-avatar {
@@ -54,9 +54,12 @@
     @apply text-red-500; 
 }
 
+.add-friends-btn-div {
+    @apply flex justify-end mt-5;
+}
+
 .add-friends-btn {
-    @apply w-32 h-10 rounded-lg bg-cyan-100 hover:bg-orange-100 active:bg-orange-200;
-    @apply absolute top-2.5 right-2.5 p-1 px-2.5 border-none rounded-sm cursor-pointer; 
+    @apply w-24 h-16 rounded-full text-center p-1 bg-cyan-100 border-cyan-500 hover:bg-orange-100 active:bg-orange-200;
 }
 
 /* Add styling for the pop-up window for add friends*/
