--- a/front-end/src/styles/Navbar.css
+++ b/front-end/src/styles/Navbar.css
@@ -1,10 +1,10 @@
 .navbar {
-  @apply pb-4 fixed bottom-0 left-1/2 bg-white; 
+  @apply pb-4 fixed bottom-0 left-1/2 bg-white;
   transform: translateX(-50%);
 }
 
 .navbar ul {
-  @apply list-none flex justify-around p-0;
+  @apply list-none flex justify-around p-0 border-b-2 shadow-md pt-4;
 }
 
 .navbar li {
@@ -13,13 +13,17 @@
 
 .app-container {
   @apply min-h-screen flex flex-col;
-  padding-bottom: 4rem; 
+  padding-bottom: 4rem;
 }
 
 .active {
-  @apply text-blue-500 px-4 py-2 font-extrabold;
+  @apply text-blue-500 px-4 py-2 font-extrabold text-xs;
 }
 
 .normal {
-  @apply text-black no-underline px-4 py-2 font-extrabold;
+  @apply text-black no-underline px-4 py-2 font-extrabold text-xs;
+}
+
+.user-image {
+  @apply flex items-center flex-col mb-2;
 }
