--- a/front-end/src/styles/AddExpense.css
+++ b/front-end/src/styles/AddExpense.css
@@ -17,3 +17,34 @@
 #splitOptions {
     @apply fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-cyan-200 rounded-2xl p-8;
 }
+
+#selected-container {
+    height: 110px; 
+    overflow-y: auto;
+    margin-bottom: 10px;
+    padding: 5px;
+}
+
+#available-container {
+    height: 70px; 
+    width: 150px;
+    overflow-y: auto;
+    margin-bottom: 10px;
+    padding: 5px;
+}
+
+.remove-button {
+    margin-left: auto;
+    padding: 5px 5px;
+    background-color: #f44336; /* Red color for remove button */
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 14px;
+    transition: background-color 0.3s ease;
+}
+
+.remove-button:hover {
+    background-color: #d32f2f;
+}
