--- a/front-end/src/styles/Event.css
+++ b/front-end/src/styles/Event.css
@@ -54,3 +54,6 @@ header {
     @apply w-24 h-16 rounded-full text-center p-1 bg-cyan-100 border-cyan-500 hover:bg-orange-100 active:bg-orange-200;
 }
 
+.space-to-scroll {
+    height: 60px;
+}
