--- a/front-end/src/styles/Navbar.css
+++ b/front-end/src/styles/Navbar.css
@@ -27,3 +27,21 @@
 .user-image {
   @apply flex items-center flex-col mb-2;
 }
+
+/* Apply dark mode styles to the navbar */
+.dark-mode {
+  @apply bg-gray-800; 
+}
+
+/* Might need to change the color for icons in the Navbar as well */
+.dark-mode .navbar ul {
+  @apply text-white;
+}
+
+.dark-mode .active {
+  @apply text-blue-300; 
+}
+
+.dark-mode .normal {
+  @apply text-gray-300;
+}
