--- a/front-end/src/styles/Navbar.css
+++ b/front-end/src/styles/Navbar.css
@@ -1,6 +1,5 @@
 .navbar {
-  @apply pb-4 fixed bottom-0 left-1/2 bg-white;
-  transform: translateX(-50%);
+  @apply pb-4 fixed bottom-0 left-0 right-0 bg-white;
 }
 
 .navbar ul {
