--- a/front-end/src/styles/UserInfo.css
+++ b/front-end/src/styles/UserInfo.css
@@ -59,11 +59,11 @@
 
 /* Dark Mode Styles */
 .dark-mode {
-    @apply bg-gray-800 text-white;
+    @apply bg-gray-700 text-white;
 }
 
 .dark-mode .user-detail-section {
-    @apply bg-gray-800;
+    @apply bg-gray-700;
 }
 
 .dark-mode .user-detail-section,
@@ -81,7 +81,7 @@
 }
 
 .dark-mode .UserInfo {
-    background-color: #121212; /* dark mode background color, about 800 */
+    @apply bg-gray-800; /* dark mode background color, about 800 */
 }
 
 
