--- a/front-end/src/styles/Event.css
+++ b/front-end/src/styles/Event.css
@@ -57,3 +57,37 @@ header {
 .space-to-scroll {
     height: 60px;
 }
+
+/* Dark Mode for Each Event Page */
+.dark-mode .event-page {
+    @apply bg-gray-400; 
+    min-height: 100vh; /* is event-page the outter most container? */
+}
+
+.dark-mode .expenses {
+    @apply bg-gray-800; 
+}
+
+.dark-mode .description,
+.dark-mode .date {
+    @apply bg-gray-700; 
+}
+
+.dark-mode .operations button,
+.dark-mode .addExpenseBtn {
+    @apply bg-gray-600 hover:bg-gray-500 active:bg-gray-400; 
+}
+
+.dark-mode .date {
+    @apply bg-gray-600;
+}
+
+.dark-mode .name:hover,
+.dark-mode .name,
+.dark-mode .amount {
+    @apply text-white; 
+}
+
+.dark-mode .space-to-scroll {
+    @apply bg-gray-700; 
+}
