--- a/front-end/src/styles/Events.css
+++ b/front-end/src/styles/Events.css
@@ -56,3 +56,42 @@
 .event-list button {
     @apply w-28 h-8 rounded-lg bg-cyan-100 hover:bg-orange-100 active:bg-orange-200;
 }
+
+/* Dark Mode for Events Page */
+.dark-mode .Events {
+    @apply bg-gray-800;
+    min-height: 100vh;
+}
+
+.dark-mode .add_events_button {
+    @apply bg-gray-500 border-gray-600 hover:bg-gray-600 active:bg-gray-700;
+}
+
+.dark-mode .add-event-content,
+.dark-mode .select-members-popup,
+.dark-mode .add-members-content {
+    @apply bg-gray-800; 
+}
+
+.dark-mode .Total_Balance_Section {
+    @apply bg-gray-700; 
+}
+
+.dark-mode .Total_Balance_avatar {
+    @apply border-cyan-600; 
+}
+
+.dark-mode .events_list,
+.dark-mode .event-list {
+    @apply bg-gray-700 border-gray-600; 
+}
+
+.dark-mode .event-list button {
+    @apply bg-gray-500 hover:bg-gray-600 active:bg-gray-700; 
+}
+
+.dark-mode .title,
+.dark-mode .Total_Balance_title,
+.dark-mode .event-list {
+    @apply text-white;
+}
