--- a/front-end/src/styles/Events.css
+++ b/front-end/src/styles/Events.css
@@ -1,4 +1,4 @@
-.Event_main {
+.Event {
     @apply flex flex-col items-center space-y-5 p-4;
     @apply bg-cyan-50 min-h-screen p-6 font-mono;
 }
@@ -58,6 +58,10 @@
 }
 
 /* Dark Mode for Events Page */
+.body-dark-mode {
+    @apply bg-gray-800; /* add dark mode to the outter most background on the page (area around the container) */
+  }
+  
 .dark-mode .Events {
     @apply bg-gray-800;
     min-height: 100vh;
