--- a/front-end/src/styles/FriendsPage.css
+++ b/front-end/src/styles/FriendsPage.css
@@ -97,6 +97,10 @@
 }
 
 /* Dark Mode for Friends Page */
+.body-dark-mode {
+    @apply bg-gray-800; /* add dark mode to the outter most background on the page (area around the container) */
+}
+
 .dark-mode .friends-page {
     @apply bg-gray-800 text-white;
     min-height: 100vh;
