--- a/front-end/src/styles/Home.css
+++ b/front-end/src/styles/Home.css
@@ -60,6 +60,10 @@
 }
 
 /* Dark Mode for Home Page */
+.body-dark-mode {
+  @apply bg-gray-800; /* add dark mode to the outter most background on the page (area around the container) */
+}
+
 .dark-mode .home-container {
   @apply bg-gray-800 min-h-screen;
 }
