--- a/front-end/src/styles/UserInfo.css
+++ b/front-end/src/styles/UserInfo.css
@@ -58,6 +58,10 @@
 }
 
 /* Dark Mode Styles */
+.body-dark-mode {
+    @apply bg-gray-800; /* add dark mode to the outter most background on the page (area around the container) */
+}
+
 .dark-mode {
     @apply bg-gray-700 text-white;
 }
