--- a/front-end/src/styles/Event.css
+++ b/front-end/src/styles/Event.css
@@ -62,14 +62,18 @@ header {
 .body-dark-mode {
     @apply bg-gray-800; /* add dark mode to the outter most background on the page (area around the container) */
   }
+
+.dark-mode .event-page-container {
+    @apply bg-gray-800; /* the area within the outter most background */
+}
   
 .dark-mode .event-page {
     @apply bg-gray-800; 
-    min-height: 100vh; /* is event-page the outter most container? */
+    min-height: 100vh; 
 }
 
 .dark-mode .expenses {
-    @apply bg-gray-800; 
+    @apply bg-gray-700; 
 }
 
 .dark-mode .description {
