--- a/front-end/src/styles/Events.css
+++ b/front-end/src/styles/Events.css
@@ -26,6 +26,10 @@
     @apply flex flex-col space-y-4 p-6 bg-white rounded-lg shadow-lg;
 }
 
+.add-Member-Button{
+    @apply cursor-pointer
+}
+
 .close {
     @apply cursor-pointer;
 }
