--- a/front-end/src/styles/Home.css
+++ b/front-end/src/styles/Home.css
@@ -44,7 +44,7 @@
 }
 
 .home-list {
-  @apply rounded-lg p-4 mt-4;
+  @apply rounded-lg p-4 mt-1;
 }
 
 .home-list2 {
@@ -59,12 +59,16 @@
   @apply text-gray-600;
 }
 
+.view-all {
+  @apply text-center text-sm text-blue-500 mx-auto;
+}
+
 .center {
   @apply flex justify-between items-center;
 }
 
 .heading2 {
-  @apply text-lg mb-2;
+  @apply text-lg mb-0;
 }
 
 .total-amount {
@@ -80,7 +84,7 @@
 }
 
 .small {
-  @apply mb-2;
+  @apply mb-1;
 }
 
 /* Dark Mode for Home Page */
