--- a/front-end/src/styles/Home.css
+++ b/front-end/src/styles/Home.css
@@ -1,5 +1,5 @@
 .home-container {
-  @apply p-6 rounded-lg shadow-md bg-white max-w-2xl mx-auto my-8 min-h-[80vh];
+  @apply p-6 rounded-lg shadow-md bg-white max-w-4xl mx-auto my-8 min-h-[80vh];
 }
 
 .greeting h1 {
@@ -14,7 +14,7 @@
   @apply p-4 rounded-md bg-cyan-100 my-2 flex flex-col cursor-pointer;
   width: 100%;
   @apply overflow-auto; 
-  height: 150px; /* if the sections exceed the page, reduce this height */
+  height: 170px; /* if the sections exceed the page, reduce this height */
 }
 
 .box h2 {
@@ -44,7 +44,7 @@
 }
 
 .home-list {
-  @apply rounded-lg p-4 mt-1;
+  @apply rounded-lg mt-1;
 }
 
 .home-list2 {
@@ -84,7 +84,7 @@
 }
 
 .small {
-  @apply mb-1;
+  @apply mb-1 mt-1;
 }
 
 /* Dark Mode for Home Page */
