--- a/front-end/src/styles/Events.css
+++ b/front-end/src/styles/Events.css
@@ -64,6 +64,11 @@
     @apply mt-6
 }
 
+.Event-date {
+    @apply inline-block;
+    @apply w-12 p-1 rounded-2xl bg-slate-100 break-words text-center opacity-60;
+}
+
 .event-list button {
     @apply w-28 h-8 rounded-lg bg-cyan-100 hover:bg-orange-100 active:bg-orange-200;
 }
