Validation + post to backend

--- a/front-end/src/styles/SplitModal.css
+++ b/front-end/src/styles/SplitModal.css
@@ -74,3 +74,8 @@
 .dark-mode .amountPerPerson .percentageContent {
     @apply text-white; 
 }
+
+.validation-message {
+    color: red;
+    text-align: center;
+}
