--- a/front-end/src/styles/Events.css
+++ b/front-end/src/styles/Events.css
@@ -1,5 +1,5 @@
 .Event {
-    @apply flex flex-col items-center space-y-5 p-4;
+    @apply flex flex-col space-y-5 p-4;
     @apply bg-cyan-50 min-h-screen p-6 font-mono;
 }
 
@@ -69,8 +69,12 @@
     @apply w-12 p-1 rounded-2xl bg-slate-100 break-words text-center opacity-60;
 }
 
+.Event-name{
+    @apply ml-10 flex-grow;
+}
+
 .event-list button {
-    @apply w-28 h-8 rounded-lg bg-cyan-100 hover:bg-orange-100 active:bg-orange-200;
+    @apply w-16 p-1 rounded-lg bg-cyan-100 hover:bg-orange-100 active:bg-orange-200;
 }
 
 /* Dark Mode for Events Page */
