--- a/front-end/src/styles/FriendsPage.css
+++ b/front-end/src/styles/FriendsPage.css
@@ -92,6 +92,10 @@
     @apply flex justify-between items-center p-4 border-b border-gray-200 bg-cyan-100; 
 }
 
+.checkbox {
+    padding-left: 5px;
+}
+
 .space-to-scroll {
     height: 60px;
 }
